grammar.js
        source_file: $ => repeat(seq($._declaration, $._newline)),



        ////////////////////////////////////////////////////////////////////////
        // Constants
        ////////////////////////////////////////////////////////////////////////

        _declaration: $ => choice(
            $.fields,
            $.function,
            $.data,
            $.data_signature,
            $.record,
            $.record_signature,
            $.infix,
            $.generalize,
            $.mutual,
            $.abstract,
            $.private,
            $.instance,
            $.macro,
            $.postulate,
            $.primitive,
            $.open,
            $.import,
            $.module_macro,
            $.module,
            $.pragma,
            $.syntax,
            $.pattern,
            $.unquote_decl,
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Field
        ////////////////////////////////////////////////////////////////////////

        // Fields
        function: $ => choice(
            seq(
                optional($.attributes),
                alias($.lhs_decl, $.lhs),
                alias(optional($.rhs_decl), $.rhs),
                optional($.where),
            ),
            seq(
                optional($.attributes),
                alias($.lhs_defn, $.lhs),
                alias(optional($.rhs_defn), $.rhs),
                optional($.where),
            ),
        ),

        // LHS
        qid: $ => prec.left(alias(choice(QID, $.id), 'qid')),

        // BId
        expr: $ => choice(
            seq($._typed_bindings, $.ARROW, $.expr),
            seq(optional($.attributes), $._atoms, $.ARROW, $.expr),
            seq($._with_exprs, '=', $.expr),
            prec(-1, $._with_exprs), // lowest precedence
        ),
        stmt: $ => choice(
            seq($._typed_bindings, $.ARROW, $.expr),
            seq(optional($.attributes), $._atoms, $.ARROW, $.expr),
            seq($._with_exprs, '=', $.expr),
            prec(-1, $._with_exprs_stmt), // lowest precedence
        ),

        // WithExprs/Expr1
        _with_exprs: $ => seq(
            repeat(seq($._atoms, '|')),
            $._application,
        ),
        _with_exprs_stmt: $ => seq(
            repeat(seq($._atoms, '|')),
            $._application_stmt,
        ),

        // ExprOrAttr
        atom: $ => choice(
            $._atom_curly,
            $._atom_no_curly,
        ),
        // Application3 / OpenArgs
        _atoms: $ => repeat1($.atom),

        _atom_curly: $ => brace(optional($.expr)),

        _atom_no_curly: $ => choice(
            '_',
            'Prop',
            'Set',
            'quote',
            'quoteTerm',
            'quoteContext',
            'unquote',
            $.SetN,
            $.PropN,
            brace_double($.expr),
            idiom($.expr),
            seq('(', ')'),
            seq('{{', '}}'),
            seq('⦃', '⦄'),
            seq($.id, '@', $.atom),
            seq('.', $.atom),
            $.record_assignments,
            alias($.field_assignments, $.record_assignments),
            $.ELLIPSIS,
            $._expr_or_attr
        ),

        // ForallBindings
        let: $ => prec.right(seq(
            'let',
            // declarations
            optional($._indent),
            repeat(seq($._declaration, $._newline)),
            $._declaration,
            // in case that there's a newline between declarations and $._let_body
            optional($._newline),

            $._let_body
        )),

        // special `let...in` in do statements
        _let_body: $ => seq(
            'in',
            $.expr
        ),

        // LamBindings
        _lambda_clauses: $ => prec.left(seq(
            repeat(seq($._lambda_clause_maybe_absurd, ';')),
            $._lambda_clause_maybe_absurd
        )),

        // AbsurdLamBindings | AbsurdLamClause
        lambda_clause: $ => seq(
            optional($.catchall_pragma),
            optional($._atoms),   // Application3PossiblyEmpty
            $.ARROW,
            $.expr,
        ),

        // DoStmts
        do: $ => seq('do',
            block($, $._do_stmt)
        ),

        // DoStmt
        _do_stmt: $ => seq(
            $.stmt,
            optional($.do_where)
        ),

        // DoWhere
        do_where: $ => seq(
            'where',
            $._lambda_clauses,
        ),

        // RecordAssignments
        _typed_bindings: $ => repeat1($.typed_binding),
